correccion archivo jenkins y sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 
 # Información del proyecto
 sonar.projectKey=co.com.ceiba.adn:sistema.control.parqueadero.front.angie.restrepo
-sonar.projectName=ADN-SistemaControlParqueadero-Front(angie.restrepo)
+sonar.projectName=ADN-SistemaControlParqueadero-Front[angie.restrepo]
 sonar.sourceEncoding=UTF-8
 sonar.sources=src/app
 sonar.exclusions=*/node_modules/**,**/*.spec.ts,**/*.directive.ts,**/*-error.ts,**/*.js,**/*.ts
