--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@angular/platform-browser": "~13.3.11",
     "@angular/platform-browser-dynamic": "~13.3.11",
     "@angular/router": "~13.3.11",
+    "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
     "generator-eslint": "^3.0.1",
     "ngx-cookie-service": "~13.2.1",
+    "ngx-pagination": "^6.0.2",
     "rxjs": "~7.5.5",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.5"
