--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -17,6 +17,9 @@
       "@propietario/*":[
         "src/app/feature/propietario/*"
       ],
+      "@factura/*":[
+        "src/app/feature/factura/*"
+      ],
       "@shared/*": [
         "src/app/shared/*"
       ]
